# NuHash

./: .gitignore  Makefile  README.md  make.cmd  nuhash.sln
etc/style/: gh-pandoc.min.css
libnuhash/: libnuhash.vcxproj  libnuhash.vcxproj.filters
libnuhash/c99/: libnuhash.vcxproj  libnuhash.vcxproj.filters
libnuhash/c99/src/: nuhash.c
libnuhash/csharp/: NuHash.sln
libnuhash/csharp/NuHash/: NuHash.cs  NuHash.csproj
libnuhash/csharp/NuHashTest/: NuHashTest.cs  NuHashTest.csproj
libnuhash/include/: nuhash.h
libnuhash/java/: .project  build.xml
libnuhash/java/src/com/muldersoft/nuhash/: NuHash.java
libnuhash/java/test/com/muldersoft/nuhash/test/: NuHashTest.java
libnuhash/js/: index.html  package.json  runme.cmd
libnuhash/js/lib/: nuhash.mjs
libnuhash/js/test/: nuhash.test.mjs
libnuhash/python/: BUILD.txt  nuhash.pyx  setup.py  test_nuhash.py
libnuhash/rust/: Cargo.toml
libnuhash/rust/examples/: nuhash_example.rs
libnuhash/rust/src/: lib.rs  nuhash.rs
libnuhash/rust/tests/: nuhash_tests.rs
libnuhash/src/: nuhash.c  version.h
tool/: nuhash.vcxproj  nuhash.vcxproj.filters
tool/res/: version.rc
tool/src/: main.c  platform.c  platform.h
