[package]
name = "nuhash-rs"
version = "1.0.0"
edition = "2021"
description = "Pure Rust implementation of the NuHash hash algorithm"

[dependencies]
once_cell = "1.18.0"

[dev-dependencies]
base64 = "0.21.2"
ctor = "0.2.4"
easy-hex = "0.1.2"

[[test]]
name = "nuhash_tests"

[[example]]
name = "nuhash_example"
